--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Evonsdesigns.GitHub.io by evonsdesigns</title>
+    <title>EvonsDesigns</title>
   </head>
 
   <body>
@@ -18,14 +18,16 @@
       <div class="inner">
 
         <header>
-          <h1>Evonsdesigns.GitHub.io</h1>
-          <h2>My Homepage</h2>
+          <h1>Evonsdesigns</h1>
+          <h2>for GitHub</h2>
         </header>
 
         <section id="downloads" class="clearfix">
           <a href="https://github.com/evonsdesigns" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
-
+        <section id="downloads" class="clearfix">
+          <a href="https://github.com/evonsdesigns" id="view-on-facebook" class="button"><span>View on Facebook</span></a>
+        </section>
         <hr>
 
         <section id="main_content">
