--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
 
         <section id="downloads" class="clearfix">
           <a href="https://github.com/evonsdesigns" id="view-on-github" class="button"><span>View on GitHub</span></a>
-        </section>
-        <section id="downloads" class="clearfix">
-          <a href="https://github.com/evonsdesigns" id="view-on-facebook" class="button"><span>View on Facebook</span></a>
+          
+          <a href="https://facebook.com/evonsdesigns" id="view-on-facebook" class="button"><span>View on Facebook</span></a>
         </section>
         <hr>
 
