--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
         <section id="downloads" class="clearfix">
           <a href="https://github.com/evonsdesigns" id="view-on-github" class="button"><span>View on GitHub</span></a>
-          
-          <a href="https://facebook.com/evonsdesigns" id="view-on-facebook" class="button"><span>View on Facebook</span></a>
+          &nbsp;
+          <a href="https://facebook.com/evonsdesigns" id="download-zip" class="button"><span>View on Facebook</span></a>
         </section>
         <hr>
 
