add win 98 texts

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <link href='https://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="stylesheets/win98.css" media="print">
+    <!--<link href='https://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">-->
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -14,6 +15,24 @@
   </head>
 
   <body>
+    <div class="window">
+  <div class="window_inner">
+    <div class="window_heading">
+      <div class="window_heading_icon"></div>
+      Some thoughts.txt
+      <div class="window_heading_buttons"></div>
+    </div>
+    <div class="window_actions">
+      File Menu Help
+    </div>
+    <div class="window_content">
+      <div class="window_content_inner">
+        <p>There was once a homepage here.</p>
+      </div>
+    </div>
+  </div>
+</div>
+    <!--
     <div id="container">
       <div class="inner">
 
@@ -43,8 +62,8 @@
            © 2015 EvonsDesigns
         </footer>
 
-        
+       
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
